v12
  # Course section 12: Creating Systems
    + Added MovementSystem
    + Implemented update of MovementSystem and Register in the Update
      function of Game
    + Added first implementation of SpriteComponent
    + Added RenderSystem
    (section completed)
v11
  # Course section 11: Creating Entities & Components
    + Implemented Component functions to the entity class
      (AddComponent/RemoveComponent/HasComponent/GetComponent)
      by storing a pointer to the registry it was created in inside
      the Entity class and calling the Component functions in the Registry
      class from within the Entity class
    (section completed)

v10
  # Course section 11: Creating Entities & Components
    + Finished first implementation of entity creation and added a Registry
      instance to Game.cpp and used the Registry to create test entities
    + Replaced raw pointers with smart pointers
    + Finished first implementation of adding components to entities by
      using Registry->AddComponent

v9
  # Course section 10: ECS Implementation
    + Added Pool class (for storing a pool of components contigously)
    + Started creating the Registry class (that will control the ECS)
    + Added Entity creation and management to the Registry class
    + Added templates to manage components in the Registry class: AddComponent,
      RemoveComponent, HasComponent
    + Added System functions
    (section completed)
v8
  # Course section 9: ECS Design
    + Made the initial skeleton the ECS main file and folder structure
    + Added sketch of Transform component
    + Added sketch of Movement system
    + Added Signature
    + Added Template for System::RequireComponent
    + Component setup with parent (base/interface) class to handle id
    + Added implementation of System functions: AddEntityToSystem, 
      RemoveEntityFromSystem, GetSystemEntities, GetComponentSignature
    (section completed)
v7
  # Course section 8: Organizing Game Objects
    (section completed)