@@ -8,7 +8,8 @@ INCLUDE_PATH = -I"./libs"
 SRC_FILES = ./src/*cpp \
 			./src/Game/*.cpp \
 			./src/Logger/*.cpp \
-			./src/ECS/*.cpp
+			./src/ECS/*.cpp \
+			./src/AssetStore/*.cpp
 LINKER_FLAGS = -lSDL2 -lSDL2_image -lSDL_ttf -lSDL2_mixer -llua
 OBJ_NAME = gameengine
 
