@@ -4,6 +4,7 @@
 #include "../ECS/ECS.h"
 #include "../Components/TransformComponent.h"
 #include "../Components/SpriteComponent.h"
+#include "../AssetStore/AssetStore.h"
 #include <SDL2/SDL.h>
 
 class RenderSystem: public System {
@@ -13,20 +14,32 @@ class RenderSystem: public System {
             RequireComponent<SpriteComponent>();
         }
 
-        void Update(SDL_Renderer* renderer) {
+        void Update(SDL_Renderer* renderer, std::unique_ptr<AssetStore>& assetStore) {
             // Loop all entities that the system is interested in
             for (auto entity: GetSystemEntities()){
                 const auto transform = entity.GetComponent<TransformComponent>();
                 const auto sprite = entity.GetComponent<SpriteComponent>();
 
-                SDL_Rect objRect = {
+                // Set the source rectangle of our original sprite texture
+                SDL_Rect srcRect = sprite.srcRect;
+
+                // Set the destingation rectangle with the x, y position to be rendered
+                SDL_Rect dstRect = {
                     static_cast<int>(transform.position.x),
                     static_cast<int>(transform.position.y),
-                    sprite.height,
-                    sprite.height
+                    static_cast<int>(sprite.width * transform.scale.x),
+                    static_cast<int>(sprite.height * transform.scale.y)
                 };
-                SDL_SetRenderDrawColor(renderer, 255, 255, 255, 255);
-                SDL_RenderFillRect(renderer, &objRect);
+
+                SDL_RenderCopyEx(
+                        renderer,
+                        assetStore->GetTexture(sprite.assetId),
+                        &srcRect,
+                        &dstRect,
+                        transform.rotation,
+                        NULL,
+                        SDL_FLIP_NONE
+                        );
             }
         }
 };
